pi-hole/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pihole
  labels:
    app: pihole
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pihole
  template:
    metadata:
      labels:
        app: pihole
    spec:
      containers:
      - name: pihole
        image: pihole/pihole:latest
        ports:
        - containerPort: 80
        - containerPort: 53
        volumeMounts:
        - name: pihole-storage
          mountPath: /etc/pihole
      volumes:
      - name: pihole-storage
        persistentVolumeClaim:
          claimName: pihole-pvc-nfs
