pi-hole/service.yaml
# filepath: /Users/chrismartin/k8s/homelab/pi-hole/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pihole
  labels:
    app: pihole
spec:
  selector:
    app: pihole
  ports:
  - name: http
    port: 80
    targetPort: 80
  - name: dns
    port: 53
    targetPort: 53
    protocol: UDP
  - name: dns-tcp
    port: 53
    targetPort: 53
    protocol: TCP
  type: LoadBalancer
  loadBalancerIP: 192.168.50.230
